[package]
name = "docker_proxy"
version = "0.2.0"
authors = ["AdySec <admin@adysec.com>"]
description = "A Docker registry proxy for multiple registries"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
# 使用 rustls-tls 功能避免 OpenSSL 依赖
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
http = "1.0"
futures = "0.3"
urlencoding = "2.1"

